# fed-synthesis

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
fed_synthesis/: README.md  pyproject.toml
fed_synthesis/core/: agg_strategy.py  carbon_tracker_client.py  client_selection.py  mlops_client.py  util.py
fed_synthesis/fedl/: client_app.py  server_app.py
fed_synthesis/infra/: carbontracker_backend.py  code_carbon_backend.py
gnn_example/: fedl_setup.py  gcn.py  pyproject.toml
gnn_example/data/: sample-dataset-test-client-0.csv  sample-dataset-test-client-1.csv  sample-dataset-test-client-2.csv  sample-dataset-test-client-3.csv  sample-dataset-test-client-4.csv  sample-dataset-train-client-0.csv  sample-dataset-train-client-1.csv  sample-dataset-train-client-2.csv  sample-dataset-train-client-3.csv  sample-dataset-train-client-4.csv
gnn_example/data/graph/: sample-dataset-test-client-0.pt  sample-dataset-test-client-1.pt  sample-dataset-test-client-2.pt  sample-dataset-test-client-3.pt  sample-dataset-test-client-4.pt  sample-dataset-train-client-0.pt  sample-dataset-train-client-1.pt  sample-dataset-train-client-2.pt  sample-dataset-train-client-3.pt  sample-dataset-train-client-4.pt
gnn_example/preprocessing/: converter.py  preprocesser.py
gnn_example/util/: constants.py  load_data.py
