[tool.poetry]
name = "fed_synthesis"
version = "0.1.0"
description = ""
authors = ["Gökcan Çantalı <gokcantali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flwr = { extras = ["simulation"], version = "1.12.0" }
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
codecarbon = "^2.8.1"
carbontracker = "^2.3.1"
mlflow = "^2.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
